# em_fastapi

./: cron_command  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/v1/routers/: instrument.py
app/core/: config.py
app/database/: db.py
app/models/: base.py  instrument.py
app/repositories/: base.py  instrument.py
app/schemas/: instrument.py  product.py
app/services/: base.py  instrument.py
app/units_of_work/: base.py
tests/: conftest.py
tests/fixtures/: __init__.py  instruments.py  test_cases.py
tests/unit/api/v1/handlers/: test_dynamics.py  test_last_trading_days.py  test_trading_results.py
